Fixed title and permission align in map cards

--- a/app/assets/stylesheets/new_dashboard/map-card.css.scss
+++ b/app/assets/stylesheets/new_dashboard/map-card.css.scss
@@ -85,6 +85,9 @@
 .MapCard-contentBodyRow {
   margin-bottom: $sMargin-min;
 }
+.MapCard-contentBodyTitle {
+  width: 205px;
+}
 .MapCard-itemTitlePermission { background-color: $cStructure-mainBkg }
 .MapCard-contentBodyRow--flex {
   @include display-flex();
